# skateboard

./: .config  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Readme.md
config/buildroot/: buildroot_nommu_defconfig  external.desc  qemu_arm_versatile_defconfig
config/buildroot/board/gigantic/skateboard/: linux.config
config/buildroot/configs/: skateboard_defconfig
config/linux/: skateboard_linux_config
config/rsp/: arm926ej-s.cfg
config/rspproxy/: arm926ej-s.cfg
patches/: eclipse-installer-linux-redhat.01.patch
scripts/: install-prerequisites  run-gdb  run-qemu  setup-gdbinit  show-linux-version  update-build-environment
